--- a/about.html
+++ b/about.html
@@ -3,32 +3,20 @@ layout: page
 title: 关于WISE R Club
 ---
 <h3>关于博客</h3>
-<p style=font-size:18px><B>Changshun.github.io</B> 是石长顺的博客, 我想在上面写一些自己学习时的一些技术文章， 也会记录些生活的点滴。非常想听你给我讲一些有趣的事情，我在听着呢。。</p>
+<p style=font-size:18px><B>wise-r.github.io</B> 是WISE R Club的博客, 由<a href="http://changshun.github.io/">石长顺</a></p>维护更新，会放置一些WISE R Club的一些信息和资料。
 
 <h3>关于作者</h3>
-<p style=font-size:18px>90人，生于鲁豫交界处。 2009年天津求学。爱骑行，偶尔跑步，不爱读书， 身体经常在路上， 灵魂总是在迷路。2014年来到厦门读书，遇到我爱的人，身边的人一个个走向幸福，我想努力一些，做些自己感兴趣的事情，争取让爱人幸福。</p>
+<p style=font-size:18px>WISE R CLUB是王亚南经济研究院硕士生自发组织的R语言学习社团，旨在让更多的同学了解学习R语言，分享R语言在学术界和业界的最新应用。</p>
 
 
-<center><img src="http://i.imgbox.com/rIguP3kT.jpg" height="600" width="820"></center>
+<center><img src="http://i.imgbox.com/LmByIf0e.jpg" height="600" width="820"></center>
 
 
 <hr>
-<a href="{{ site.author.linkedin }}">
-  <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="{{ site.author.weibo }}" target="_blank">
-  <i class="fa fa-weibo fa-lg" style="color:#16a095;"></i>
-</a>
 <a href="{{ site.author.github }}" target="_blank">
   <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
 </a>
-<a href="/pages/atom.xml" target="_blank">
-  <i class="fa fa-rss fa-lg" style="color:#16a095;"></i>
-</a>
 <a href="mailto:{{ site.author.email }}">
   <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="{{ site.author.music }}">
-  <i class="fa fa-music fa-lg" style="color:#16a095;"></i>
 </a>
 <hr>
